--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ header,
 footer,
 main {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
 }
